# sys-our-syssoft-project

./: .gitignore  AUTHOR  CONTRIBUTING.md  COPYING  Makefile.am  README.md  bootstrap.sh  configure.ac
.reuse/: dep5
.tools/: reuse  syseg-export  syseg-newfile  syseg-project  syseg-reuse
doc/: conventions.md  notation.md  references.md  syseg.md
draft/: temp-notes.txt
draft/crack/: Makefile.m4  crypt.c  cypher.c  cypher.h  cypherbin.c  debug.h
eg/: Makefile.am  README.m4
eg/abi/: Makefile.m4  README.m4  bar.S  eg-00.c  eg-01.c  eg-02.c  eg-02_pack.c  eg-03.S  eg-03_c.c  eg-03_crt0.S  eg-03_crt0.c  eg-04.c  eg-04_64.c  eg-05.c  eg-06.c  eg-07-a.c  eg-07-b.c  eg-08.c  eg-09.c  eg-10.S  eg-11.S  eg-12.S  eg-13-bug.S  eg-13.S  eg-14.S  eg-15.S  eg-16.S  eg-16.c  eg-17.c  eg-18.c  eg-18_fastcall.c  eg-20.c
eg/bl/: Makefile.m4  README.m4  boot.ld  stage1.c  stage2.c  utils.c  utils.h
eg/crt/: Makefile.m4  README.m4  eg-01.S  eg-02.S  eg-03.S  eg-04.S  eg-05.S  eg-06.S  eg-07.S  eg-08-crt0.S  eg-08.S  eg-08.ld  eg-09.S  eg-09.ld  eg-10.c  eg-10.ld  eg-11.c  eg-11.ld  eg-12-lib.c  eg-12-lib.h  eg-12.c  eg-12.ld  eg-13-lib.c  eg-13-lib.h  eg-13.c  eg-13.ld  hello.S
eg/format/: Makefile.m4  README.m4  fat.h  hw.ld  mbrinfo.c  mbs.S  mkfat12-beta.c  mkfat12.c
eg/hw/: Makefile.m4  eg-00-r1.hex  eg-04-alpha.c  egx-01.S
eg/make/: README.m4  circle.c  circle.h  main.c
eg/posix/: Makefile.m4  README.m4  ctermid.c  exec-01.c  exec.c  file.c  fork-01.c  fork-02.c  fork.c  getpid.c  hello.c  kill.c  loop.c  open.c  pgid.c  pipe.c  pipeline.c  redir.c  shell-job.c  shell-loop.c  shell-pipe.c  shell-redir.c  sigaction-handler.c  sigaction.c  tcpgrp.c  wait.c
eg/real/: Makefile.m4  README.m4  eg-00.S  eg-01.S  eg-01_alpha.S  eg-02-rene.S  eg-02-v2.S  eg-02.S  eg-03-v2.c  eg-03-v2.h  eg-03-v2_utils.c  eg-03.c  eg-03.h  eg-03_utils.c  eg.c  egx-01.S  egx-02.S  mbr-crt0.ld  mbr-nort0.ld  rt0.S  rt0.c
eg/rop/: Makefile.m4  README.m4  eg-00.c  eg-01.c  eg-02.c  eg-04.c  eg-04a.c  eg-06.c  eg-07.c  eg-08.c  eg-09.S  eg-09.c  eg-09.sh
eg/run/: Makefile.m4  README.m4  eg-02.c  eg-02a.c
eg/tyos/: Makefile.m4  README.m4  boot.ld  bootloader.c  kernel.c  runtime.c  runtime.h  syscall.c  syscall.h  utils.c
eg/tyos32/: Makefile.m4  README.m4  bootloader.c  kernel-old.c  kernel.c  rt0.S  utils.h
extra/: Makefile.am
extra/autotools/ex/: Makefile.am  configure.ac  main.c
replace/: Makefile.am
test/: Makefile.am
tools/: Makefile.am  bintools.m4  clean-extra-subdirs.am  debug.h  docm4.am  docm4.m4  install-reuse  syseg-export  syseg-newfile  syseg-project  syseg-reuse
try/: Makefile.am  README.m4
try/hack01/: Makefile.m4  README.m4  check.sh  encrypt.license
try/hw/: Makefile.m4  README.m4  hw.S  hw.c
try/imf01/: Makefile.m4  README.m4  cypherbin.c
try/mbr/: Makefile.m4  README.m4  main.c  mbr.c  mbr.h  mbr.ld  rt0.c
try/tyos/: Makefile.m4
