#    SPDX-FileCopyrightText: 2001 Monaco F. J. <monaco@usp.br>
#   
#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of SYSeg, available at https://gitlab.com/monaco/syseg.

extra_subdirs = 

# Hint: ./make/Makefile cannot be processed by dist-hook.
#       The directory is not being cleaned by local-clean.

EXTRA_DIST = $(extra_subdirs) make

docm4_files = README make/README autotools/README

# REUSE-IgnoreStart
include $(top_srcdir)/tools/docm4.am
include $(top_srcdir)/tools/clean-extra-subdirs.am
# REUSE-IgnoreEnd 






