#    SPDX-FileCopyrightText: 2021 Monaco F. J. <monaco@usp.br>
#   
#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of SYSeg, available at https://gitlab.com/monaco/syseg.

extra_subdirs = mbr tyos imf01 

EXTRA_DIST = $(extra_subdirs) 

docm4_files = README mbr/README mbr/Makefile tyos/Makefile tyos/README imf01/README imf01/Makefile hack01/README hack01/Makefile hw/README hw/Makefile 

# REUSE-IgnoreStart
include $(top_srcdir)/tools/docm4.am
include $(top_srcdir)/tools/clean-extra-subdirs.am
# REUSE-IgnoreEnd 

